# thestuu

./: .gitignore  .gitleaks.toml  .shimwrappercheckrc  README.md  package-lock.json  package.json
apps/native-engine/: CMakeLists.txt  package.json
apps/native-engine/build-tracktion/: Makefile
apps/native-engine/build-tracktion/juce/: JUCEExportConfig.cmake  cmake_install.cmake
apps/native-engine/build-tracktion/juce/tools/: Makefile
apps/native-engine/build-tracktion/tracktion_engine/: CTestTestfile.cmake  Makefile
apps/native-engine/build-tracktion/tracktion_engine/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
apps/native-engine/build-tracktion/tracktion_engine/examples/Benchmarks/: CTestTestfile.cmake  Makefile  cmake_install.cmake
apps/native-engine/build-tracktion/tracktion_engine/examples/Benchmarks/Benchmarks_artefacts/JuceLibraryCode/: Defs.txt  Info.txt
apps/native-engine/build-tracktion/tracktion_engine/examples/DemoRunner/: CTestTestfile.cmake  Makefile  cmake_install.cmake
apps/native-engine/build-tracktion/tracktion_engine/examples/DemoRunner/DemoRunner_artefacts/JuceLibraryCode/: Defs.txt  Info.txt
apps/native-engine/build-tracktion/tracktion_engine/examples/DemoRunner/DemoRunner_artefacts/JuceLibraryCode/DemoRunner/: Info.plist
apps/native-engine/build-tracktion/tracktion_engine/examples/EngineInPluginDemo/: Makefile
apps/native-engine/build-tracktion/tracktion_engine/examples/EngineInPluginDemo/EngineInPluginDemo_artefacts/JuceLibraryCode/: Defs.txt  JuceLV2Defines.h
apps/native-engine/build-tracktion/tracktion_engine/examples/EngineInPluginDemo/EngineInPluginDemo_artefacts/JuceLibraryCode/EngineInPluginDemo_AAX/: Info.plist
apps/native-engine/build-tracktion/tracktion_engine/examples/EngineInPluginDemo/EngineInPluginDemo_artefacts/JuceLibraryCode/EngineInPluginDemo_AU/: Info.plist
apps/native-engine/build-tracktion/tracktion_engine/examples/EngineInPluginDemo/EngineInPluginDemo_artefacts/JuceLibraryCode/EngineInPluginDemo_Standalone/: Info.plist
apps/native-engine/build-tracktion/tracktion_engine/examples/EngineInPluginDemo/EngineInPluginDemo_artefacts/JuceLibraryCode/EngineInPluginDemo_VST3/: Info.plist
apps/native-engine/build-tracktion/tracktion_engine/examples/TestRunner/: Makefile  cmake_install.cmake
apps/native-engine/build-tracktion/tracktion_engine/examples/TestRunner/TestRunner_artefacts/JuceLibraryCode/: Defs.txt  Info.txt
apps/native-engine/build-tracktion/tracktion_engine/modules/: cmake_install.cmake
apps/native-engine/scripts/: bootstrap-vendor.sh
apps/native-engine/src/: main.cpp  tracktion_backend.hpp  tracktion_backend_tracktion.cpp
docs/: analyze-bpm-key.md  extract-stems.md  fit-to-tempo.md  (+6 more)
thestuu/apps/native-engine/: CMakeLists.txt  README.md
thestuu/apps/native-engine/build-tracktion/: CMakeCache.txt  cmake_install.cmake
thestuu/apps/native-engine/build-tracktion/juce/: Makefile
thestuu/apps/native-engine/build-tracktion/juce/modules/: Makefile  cmake_install.cmake
thestuu/apps/native-engine/build-tracktion/juce/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  cmake_install.cmake
thestuu/apps/native-engine/build-tracktion/juce/tools/modules/: Makefile  cmake_install.cmake
thestuu/apps/native-engine/build-tracktion/tracktion_engine/: cmake_install.cmake
thestuu/apps/native-engine/build-tracktion/tracktion_engine/examples/DemoRunner/juce_binarydata_DemoRunnerBinaryData/JuceLibraryCode/: input_file_list
thestuu/apps/native-engine/build-tracktion/tracktion_engine/examples/EngineInPluginDemo/: CTestTestfile.cmake  cmake_install.cmake
thestuu/apps/native-engine/build-tracktion/tracktion_engine/examples/EngineInPluginDemo/EngineInPluginDemo_artefacts/JuceLibraryCode/: Info.txt  Main.cpp
thestuu/apps/native-engine/build-tracktion/tracktion_engine/examples/TestRunner/: CTestTestfile.cmake
thestuu/apps/native-engine/build-tracktion/tracktion_engine/modules/: Makefile
thestuu/apps/native-engine/scripts/: bootstrap-vendor.sh
thestuu/apps/native-engine/src/: main.cpp  tracktion_backend.hpp  tracktion_backend_stub.cpp  tracktion_backend_tracktion.cpp
(+40 files in other folders)
